# cmake.nvim

./: README.md
autoload/fzf/: rtags.vim  vim.vim
plugin/: cmake.vim  rtags.vim
rplugin/python/: cmake.py
rplugin/python3/: cmake.py  test_cmake.py
rplugin/python3/cmake/: __init__.py  cmake.py
tests/: test_cmake.py
tests/rplugin/python3/: test_cmake.py
tests/rplugin/python3/clean/: Test.cpp
tests/rplugin/python3/dirty/: CMakeLists.txt
